# grupo8_iagen

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  logging_utils.py  ollama_client.py  schemas.py
data/: CORPUS_DEEP_RESEARCH_REVIEW.md
data/chunks/: acsm_progression_models_2009.json  consensus_beginner_safety.json  deep_squat_lumbar_kyphosis_2025.json  elastic_resistance_healthy_adults_2017.json  free_weight_vs_machine_2023.json  guideline_general_health.json  guideline_recovery_monitoring.json  guideline_strength_foundations.json  hypertrophy_umbrella_review_2022.json  joint_flexibility_rt_2025.json  low_vs_high_load_2017.json  minimal_dose_resistance_2017.json  nsca_professional_standards_2017.json  review_frequency_dose.json  review_home_training.json  review_hypertrophy_volume.json  review_progression_principles.json  review_restriction_adaptations.json  review_volume_limits.json  semed_exercise_prescription_2015.json  training_frequency_hypertrophy_2019.json  who_physical_activity_2020.json
data/processed/: acsm_progression_models_2009.txt  consensus_beginner_safety.txt  deep_squat_lumbar_kyphosis_2025.txt  elastic_resistance_healthy_adults_2017.txt  free_weight_vs_machine_2023.txt  guideline_general_health.txt  guideline_recovery_monitoring.txt  guideline_strength_foundations.txt  hypertrophy_umbrella_review_2022.txt  joint_flexibility_rt_2025.txt  low_vs_high_load_2017.txt  minimal_dose_resistance_2017.txt  (+10 more)
rag/: chunking.py  download_corpus.py  embeddings.py  ingest.py  retrieve.py  vector_store.py
(+18 files in other folders)
