[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iagen-v2"
version = "0.1.0"
description = "Academic prototype for training-plan generation with local LLM, RAG, and heuristic validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "requests>=2.32",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "rag*"]
